# telegram-pipe

./: .env-example  .gitignore  Makefile  README.md  pipelines.yaml  pyproject.toml
.github/workflows/: continuous_integration.yml
scripts/: install_hooks.sh
telegram_pipe/: client.py  clients.py  config.py  filter_utils.py  filters.py  main.py  models.py  pipeline.py
